still trying to fix the date bug on mobile

--- a/styles/blog-list.css
+++ b/styles/blog-list.css
@@ -63,7 +63,7 @@
     }
 
     .posts {
-        gap: 0.15rem;
+        gap: 0.5rem;
         /* Reduce gap between posts for small screens */
     }
 }
